Estruturando o HTML da section home

--- a/index.html
+++ b/index.html
@@ -55,6 +55,27 @@
             <p class="home__work">
               frontend developer, backend developer java
             </p>
+            <dl class="home__list">
+              <dt>AGE:</dt>
+              <dd>28</dd>
+              <dt>PHONE:</dt>
+              <dd>+55 (83) 9 9926-0495</dd>
+              <dt>EMAIL:</dt>
+              <dd>dgleysilva@gmail.com</dd>
+              <dt>ADDRESS:</dt>
+              <dd>Catolé do Rocha - Paraíba</dd>
+            </dl>
+            <div class="home__socials">
+              <a href="https://github.com/dgleyramos1" target="_blank" class="home__social-link">
+                <i class="ri-github-fill"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/dgleyramos/" target="_blank" class="home__social-link">
+                <i class="ri-linkedin-box-fill"></i>
+              </a>
+              <a href="https://www.instagram.com/dgleyramos/" target="_blank" class="home__social-link">
+                <i class="ri-instagram-line"></i>
+              </a>
+            </div>
           </div>
         </div>
       </section>
