Estilizando a section home

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="./assets/img/profile.jpg" alt="Foto de perfil" class="home__img">
           <div class="home__data">
             <h1 class="home__name">
-              Dgley Ramos
+              Dgley Ramos_
             </h1>
             <p class="home__work">
               frontend developer, backend developer java
