Estruturando o HTML do header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,51 @@
   </head>
   <body>
     <!--=============== Header ===============-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li>
+              <a href="#home" class="nav__link active-link">
+                Dgley Ramos_
+              </a>
+            </li>
+
+            <li>
+              <a href="#services" class="nav__link">
+                Serviços
+              </a>
+            </li>
+
+            <li>
+              <a href="#resume" class="nav__link">
+                Resumo
+              </a>
+            </li>
+
+            <li>
+              <a href="#portfolio" class="nav__link">
+                Portfólio
+              </a>
+            </li>
+
+            <li>
+              <a href="#contact" class="nav__link">
+                Contato
+              </a>
+            </li>
+          </ul>
+
+          <div class="nav__close" id="nav-close">
+            <i class="ri-close-fill"></i>
+          </div>
+        </div>
+
+        <div class="nav__toggle" id="nav-toggle">
+          <i class="ri-menu-fill"></i>
+        </div>
+      </nav>
+    </header>
 
     <!--=============== Main ===============-->
     <main class="main">
