Estilizando o header e estruturando a section hello

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
     <!--=============== Css ===============-->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/header.css">
+    <link rel="stylesheet" href="./assets/css/home.css">
+    <link rel="stylesheet" href="./assets/css/hello.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
+    <link rel="stylesheet" href="./assets/css/buttons.css">
+    <link rel="stylesheet" href="./assets/css/active-links.css">
 
     <!--=============== Skin Colors ===============-->
     <link
@@ -46,7 +51,7 @@
           <ul class="nav__list">
             <li>
               <a href="#home" class="nav__link active-link">
-                Dgley Ramos_
+                Dgley Ramos
               </a>
             </li>
 
@@ -125,7 +130,14 @@
       </section>
 
       <!--=============== Hello ===============-->
-      <section class="hello section container"></section>
+      <section class="hello section container">
+        <h2 class="section__title">
+          Hi_
+        </h2>
+        <p class="hello__details text-lg">
+          Sou desenvolvedor Web Júnior capaz de construir uma presença na Web desde o início - desde o conceito, navegação, layout e programação até SEO. Hábil em escrever código bem projetado, testável e eficiente usando as melhores práticas atuais no desenvolvimento da Web. Aprendo rápido, trabalho duro e trabalho em equipe, proficiente em uma variedade de linguagens de script e ferramentas da Web multimídia.
+        </p>
+      </section>
 
       <!--=============== Services ===============-->
       <section class="services section container" id="services"></section>
