--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!--=============== Css ===============-->
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/header.css">
-    <link rel="stylesheet" href="./assets/css/home.css">
-    <link rel="stylesheet" href="./assets/css/hello.css">
+    <link rel="stylesheet" href="./assets/css/sections/home.css">
+    <link rel="stylesheet" href="./assets/css/sections/hello.css">
+    <link rel="stylesheet" href="./assets/css/sections/services.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
@@ -41,7 +42,7 @@
       disabled
     />
 
-    <title>Dgley Ramos - Portfolio</title>
+    <title>Dgley Ramos - Portfólio</title>
   </head>
   <body>
     <!--=============== Header ===============-->
@@ -137,6 +138,13 @@
         <p class="hello__details text-lg">
           Sou desenvolvedor Web Júnior capaz de construir uma presença na Web desde o início - desde o conceito, navegação, layout e programação até SEO. Hábil em escrever código bem projetado, testável e eficiente usando as melhores práticas atuais no desenvolvimento da Web. Aprendo rápido, trabalho duro e trabalho em equipe, proficiente em uma variedade de linguagens de script e ferramentas da Web multimídia.
         </p>
+        <a
+          href="./assets/img/John-Cv.pdf"
+          class="button button--flex text-sm"
+        >
+          <i class="ri-download-line"></i>
+          DOWNLOAD CV
+        </a>
       </section>
 
       <!--=============== Services ===============-->
