Section services criada e estilizada

--- a/index.html
+++ b/index.html
@@ -148,7 +148,73 @@
       </section>
 
       <!--=============== Services ===============-->
-      <section class="services section container" id="services"></section>
+      <section class="services section container" id="services">
+        <h2 class="section__title">Serviços_</h2>
+        <div class="services__container grid">
+
+          <div class="services__item">
+            <div class="icon__box">
+              <img
+                src="./assets/img/laptop.png"
+                alt=""
+                class="services__icon"
+              />
+              <div class="services__dot">
+                <span class="dot"></span>
+              </div>
+            </div>
+
+            <h3 class="services__title text-lg">
+              WEB DEVELOPMENT
+            </h3>
+            <p class="services__details">
+              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+            </p>
+          </div>
+
+
+          <div class="services__item">
+            <div class="icon__box">
+              <img
+                src="./assets/img/smartphone-call.png"
+                alt=""
+                class="services__icon"
+              />
+              <div class="services__dot">
+                <span class="dot"></span>
+              </div>
+            </div>
+
+            <h3 class="services__title text-lg">
+              RESPONSIVE DESIGN
+            </h3>
+            <p class="services__details">
+              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+            </p>
+          </div>
+
+          <div class="services__item">
+            <div class="icon__box">
+              <img
+                src="./assets/img/seo.png"
+                alt=""
+                class="services__icon"
+              />
+              <div class="services__dot">
+                <span class="dot"></span>
+              </div>
+            </div>
+
+            <h3 class="services__title text-lg">
+              SEO
+            </h3>
+            <p class="services__details">
+              am an expert web designer and developer. Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+            </p>
+          </div>
+
+        </div>
+      </section>
 
       <!--=============== Resume ===============-->
       <section class="section container" id="resume"></section>
