Section resume criada e estilizada

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./assets/css/sections/home.css">
     <link rel="stylesheet" href="./assets/css/sections/hello.css">
     <link rel="stylesheet" href="./assets/css/sections/services.css">
+    <link rel="stylesheet" href="./assets/css/sections/resume.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
@@ -217,7 +218,69 @@
       </section>
 
       <!--=============== Resume ===============-->
-      <section class="section container" id="resume"></section>
+      <section class="section container" id="resume">
+        <h2 class="section__title">Resumo_</h2>
+
+        <div class="resume__container grid">
+          <div class="resume__data">
+            <h3 class="resume__title text-sm">EDUCAÇÃO</h3>
+
+            <div class="resume__item">
+              <h3 class="resume__subtitle text-sm">
+                Alura
+              </h3>
+              <p class="resume__date text-sm">
+                2022 - 2023
+              </p>
+              <p class="resume__description text-lg">
+                Full Stack
+              </p>
+            </div>
+
+            <div class="resume__item">
+              <h3 class="resume__subtitle text-sm">
+                CEJA - Centro de Educação de Jovens e Adultos
+              </h3>
+              <p class="resume__date text-sm">
+                2011 - 2014
+              </p>
+              <p class="resume__description text-lg">
+                Ensino Médio
+              </p>
+            </div>
+
+          </div>
+
+          <div class="resume__data">
+            <h3 class="resume__title text-sm">EXPERIÊNCIA</h3>
+
+            <div class="resume__item">
+              <h3 class="resume__subtitle text-sm">
+                Aprendiz de Luthier
+              </h3>
+              <p class="resume__date text-sm">
+                2015 - 2016
+              </p>
+              <p class="resume__description text-lg">
+                Instituto Cultural Casa do Béradêro
+              </p>
+            </div>
+
+            <div class="resume__item">
+              <h3 class="resume__subtitle text-sm">
+                Cinegrafista
+              </h3>
+              <p class="resume__date text-sm">
+                2011 - 2014
+              </p>
+              <p class="resume__description text-lg">
+                ESPROART
+              </p>
+            </div>
+
+          </div>
+        </div>
+      </section>
 
       <!--=============== Skills ===============-->
       <section class="section container"></section>
