Criando a section skills

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="./assets/css/sections/services.css">
     <link rel="stylesheet" href="./assets/css/sections/resume.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
+    <link rel="stylesheet" href="./assets/css/sections/skills.css">
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
 
@@ -283,7 +284,159 @@
       </section>
 
       <!--=============== Skills ===============-->
-      <section class="section container"></section>
+      <section class="section container">
+        <h2 class="section__title">Skills_</h2>
+
+        <div class="skills__container grid">
+
+          <div class="skills__content">
+            <h3 class="skills__title text-sm">FRONTEND</h3>
+
+            <div class="skills__list grid">
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">HTML</p>
+                  <span class="skills__number text-sm">75%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 75%"/>
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">CSS</p>
+                  <span class="skills__number text-sm">60%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 60%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">BOOTSTRAP</p>
+                  <span class="skills__number text-sm">50%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 50%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">JAVASCRIPT</p>
+                  <span class="skills__number text-sm">40%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 40%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">REATC.JS</p>
+                  <span class="skills__number text-sm">20%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 20%">
+
+                  </span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="skills__content">
+            <h3 class="skills__title text-sm">BACKEND</h3>
+
+            <div class="skills__list grid">
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">JAVA</p>
+                  <span class="skills__number text-sm">25%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 25%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">SPRING BOOT</p>
+                  <span class="skills__number text-sm">15%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 15%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">POSTGRESQL</p>
+                  <span class="skills__number text-sm">10%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 10%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">WORDPRESS</p>
+                  <span class="skills__number text-sm">50%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 50%">
+
+                  </span>
+                </div>
+              </div>
+
+              <div class="skills__data">
+                <div class="skills__titles">
+                  <p class="skills__name test-sm">NODE.JS</p>
+                  <span class="skills__number text-sm">10%</span>
+                </div>
+
+                <div class="skills__bar">
+                  <span class="skills__percentage" style="width: 10%">
+
+                  </span>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </section>
 
       <!--=============== Projects ===============-->
       <section class="work section container" id="portfolio"></section>
