Estruturando o html da section projects

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./assets/css/sections/resume.css">
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
     <link rel="stylesheet" href="./assets/css/sections/skills.css">
+    <link rel="stylesheet" href="./assets/css/sections/projects.css">
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
 
@@ -439,7 +440,18 @@
       </section>
 
       <!--=============== Projects ===============-->
-      <section class="work section container" id="portfolio"></section>
+      <section class="work section container" id="portfolio">
+        <h2 class="section__title">
+          Projetos_
+        </h2>
+
+        <div class="project__categories">
+          <button class="category__btn text-xs">TODOS</button>
+          <button class="category__btn text-xs">INSTITUCIONAIS</button>
+          <button class="category__btn text-xs">LANDING PAGES</button>
+          <button class="category__btn text-xs">APIs</button>
+        </div>
+      </section>
 
       <!--=============== Testimonials ===============-->
       <section class="testimonials section"></section>
