Estilizando a setion projects

--- a/index.html
+++ b/index.html
@@ -446,10 +446,105 @@
         </h2>
 
         <div class="project__categories">
-          <button class="category__btn text-xs">TODOS</button>
+          <button class="category__btn text-xs active-work">TODOS</button>
           <button class="category__btn text-xs">INSTITUCIONAIS</button>
           <button class="category__btn text-xs">LANDING PAGES</button>
           <button class="category__btn text-xs">APIs</button>
+        </div>
+
+        <div class="projects__container grid">
+
+          <div class="project__item grid">
+            <img
+              src="./assets/img/project-1.png"
+              alt=""
+              class="project__img"  
+            />
+
+            <div class="project__data">
+              <h3 class="project__title text-lg">
+                MOBILE AND DESKTOP APP FOR LONDON HOSTEL STORE
+              </h3>
+              <p class="project__description">
+                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
+              </p>
+              <h4 class="project__stack text-xs">
+                USED STACK:
+              </h4>
+              <ul class="tags text-sm">
+                <li>html5</li>
+                <li>css3</li>
+                <li>JavaScript</li>
+                <li>BEM</li>
+                <li>bower</li>
+                <li>grunt</li>
+              </ul>
+
+              <a href="" class="project__link text-sm">www.superapp.com</a>
+            </div>
+          </div>
+
+          <div class="project__item grid">
+            <img
+              src="./assets/img/project-1.png"
+              alt=""
+              class="project__img"  
+            />
+
+            <div class="project__data">
+              <h3 class="project__title text-lg">
+                WEB APP PAGE FOR TRAVEL COMPANY
+              </h3>
+              <p class="project__description">
+                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
+              </p>
+              <h4 class="project__stack text-xs">
+                USED STACK:
+              </h4>
+              <ul class="tags text-sm">
+                <li>html5</li>
+                <li>css3</li>
+                <li>JavaScript</li>
+                <li>BEM</li>
+                <li>bower</li>
+                <li>grunt</li>
+              </ul>
+
+              <a href="" class="project__link text-sm">www.superapp.com</a>
+            </div>
+          </div>
+
+          <div class="project__item grid">
+            <img
+              src="./assets/img/project-1.png"
+              alt=""
+              class="project__img"  
+            />
+
+            <div class="project__data">
+              <h3 class="project__title text-lg">
+                ADMIN TEMPLATE FOR PHOTO SERVICE
+              </h3>
+              <p class="project__description">
+                Do answered bachelor occasion in of offended no concerns. Supply worthy warmth branch of no ye. Voice tried known to as my to. Though wished merits or be. Alone visit use these smart rooms ham.
+              </p>
+              <h4 class="project__stack text-xs">
+                USED STACK:
+              </h4>
+              <ul class="tags text-sm">
+                <li>html5</li>
+                <li>css3</li>
+                <li>JavaScript</li>
+                <li>BEM</li>
+                <li>bower</li>
+                <li>grunt</li>
+              </ul>
+
+              <a href="" class="project__link text-sm">www.superapp.com</a>
+            </div>
+          </div>
+
+
         </div>
       </section>
 
