Criando slider de depoimentos com swiper

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/skins/color-1.css" />
     <link rel="stylesheet" href="./assets/css/sections/skills.css">
     <link rel="stylesheet" href="./assets/css/sections/projects.css">
+    <link rel="stylesheet" href="./assets/css/sections/testimonial.css">
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
 
@@ -500,13 +501,16 @@
                 <li>grunt</li>
               </ul>
 
-              <a href="" class="project__link text-sm">www.superapp.com</a>
+              <div class="project__link">
+                <a href="" class="project__link--item text-sm">Demo</a>
+                <a href="" class="project__link--item text-sm">Repositório</a>
+              </div>
             </div>
           </div>
 
           <div class="project__item grid mix web">
             <img
-              src="./assets/img/project-1.png"
+              src="./assets/img/project-2.png"
               alt=""
               class="project__img"  
             />
@@ -530,13 +534,16 @@
                 <li>grunt</li>
               </ul>
 
-              <a href="" class="project__link text-sm">www.superapp.com</a>
+              <div class="project__link">
+                <a href="" class="project__link--item text-sm">Demo</a>
+                <a href="" class="project__link--item text-sm">Repositório</a>
+              </div>
             </div>
           </div>
 
           <div class="project__item grid mix landing">
             <img
-              src="./assets/img/project-1.png"
+              src="./assets/img/project-3.png"
               alt=""
               class="project__img"  
             />
@@ -560,7 +567,10 @@
                 <li>grunt</li>
               </ul>
 
-              <a href="" class="project__link text-sm">www.superapp.com</a>
+              <div class="project__link">
+                <a href="" class="project__link--item text-sm">Demo</a>
+                <a href="" class="project__link--item text-sm">Repositório</a>
+              </div>
             </div>
           </div>
 
@@ -569,7 +579,63 @@
       </section>
 
       <!--=============== Testimonials ===============-->
-      <section class="testimonials section"></section>
+      <section class="testimonials section">
+        <div class="testimonial__bg">
+          <div class="testimonial__icon">
+            <i class="ri-double-quotes-r"></i>
+          </div>
+
+          <div class="swiper testimonial__container container">
+            <div class="swiper-wrapper">
+
+              <div class="swiper-slide testimonial__item">
+                <h3 class="author__name text-lg">
+                  Antonio Anderson
+                </h3>
+                <p class="author__project">
+                  Project: Landin page for travel company
+                </p>
+                <div class="ruler"></div>
+                <p class="testimonial__description text-lg">
+                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
+                </p>
+              </div>
+
+              <div class="swiper-slide testimonial__item">
+                <h3 class="author__name text-lg">
+                  Antonio Anderson
+                </h3>
+                <p class="author__project">
+                  Project: Landin page for travel company
+                </p>
+                <div class="ruler"></div>
+                <p class="testimonial__description text-lg">
+                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
+                </p>
+              </div>
+
+              <div class="swiper-slide testimonial__item">
+                <h3 class="author__name text-lg">
+                  Antonio Anderson
+                </h3>
+                <p class="author__project">
+                  Project: Landin page for travel company
+                </p>
+                <div class="ruler"></div>
+                <p class="testimonial__description text-lg">
+                  Up or well must less rent read walk so be. Easy sold at do hour sing spot. Any meant has cease too the decay. Since party burst am it match. By or blushes between besides offices noisier as. Sending do brought winding compass in. Easy sold at do hour sing spot less rent read walk so be. Any meant has cease too the decay.
+                </p>
+              </div>
+
+            </div>
+
+            <!--   Swiper Controlls  -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
 
       <!--=============== Blog ===============-->
       <section class="blog section container" id="blog"></section>
