Estilizando a section de depoimentos

--- a/index.html
+++ b/index.html
@@ -630,8 +630,14 @@
             </div>
 
             <!--   Swiper Controlls  -->
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next">
+              <img src="./assets/img/arrow-next.svg"
+              alt="Icon arrow next">
+            </div>
+            <div class="swiper-button-prev">
+              <img src="./assets/img/arrow-prev.svg"
+              alt="Icon arrow prev">
+            </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
