Estrutura da section contact criada

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./assets/css/sections/skills.css">
     <link rel="stylesheet" href="./assets/css/sections/projects.css">
     <link rel="stylesheet" href="./assets/css/sections/testimonial.css">
+    <link rel="stylesheet" href="./assets/css/sections/contact.css">
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
 
@@ -107,7 +108,7 @@
               Dgley Ramos_
             </h1>
             <p class="home__work">
-              frontend developer, backend developer java
+              desenvolvedor web
             </p>
             <dl class="home__list">
               <dt>AGE:</dt>
@@ -643,11 +644,109 @@
         </div>
       </section>
 
-      <!--=============== Blog ===============-->
-      <section class="blog section container" id="blog"></section>
-
       <!--=============== Contact ===============-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <div class="contac__content container">
+          <h2 class="section_-title">
+            Entrar em contato_
+          </h2>
+
+          <div class="contact__container grid">
+
+            <div class="contact__info">
+              <dl class="contact__list">
+                <dt>Whasapp:</dt>
+                <dd>+55 (83) 9 9926-0495</dd>
+                <dt>E-mail:</dt>
+                <dd>dgleysilva@gmail.com</dd>
+              </dl>
+
+              <ul class="contact__socials">
+                <li>
+                  <a
+                    href="https://www.instagram.com/dgleyramos/"
+                    class="contact__social-link"
+                    target="_blank"
+                  >
+                  Instagram
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/dgleyramos/"
+                    class="contact__social-link"
+                    target="_blank"
+                  >
+                  linkedIn
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://github.com/dgleyramos1"
+                    class="contact__social-link"
+                    target="_blank"
+                  >
+                  Github
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="contact__form">
+              <p class="contact__form-title">
+                Ou apenas me escreva uma carta aqui_
+              </p>
+
+              <form action="" id="contact">
+
+                <div class="contact__input-div">
+                  <input
+                    type="text"
+                    placeholder="Seu nome"
+                    class="contact__input"
+                    id="contact-name"  
+                  />
+                </div>
+
+                <div class="contact__input-div">
+                  <input
+                    type="email"
+                    placeholder="Seu e-mail"
+                    class="contact__input"
+                    id="contact-email"  
+                  />
+                </div>
+
+                <div class="contact__input-div">
+                  <textarea
+                    placeholder="Digite a mensagem aqui"
+                    class="contact__input textarea"
+                    id="message"
+                    cols="30"
+                    rows="10"
+                    ></textarea>
+                </div>
+
+                <p class="contact__message text-sm" id="contact-message">
+                  Mensagem
+                </p>
+
+                <button
+                  type="submit"
+                  class="button contact__button"
+                >
+                  Enviar
+                </button>
+
+              </form>
+
+              <p class="footer__copy">
+                &copy; 2022 Dgley Ramos. Todos os direitor reservados
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--=============== Style Switcher ===============-->
