Estilizando a section contact

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="./assets/css/sections/projects.css">
     <link rel="stylesheet" href="./assets/css/sections/testimonial.css">
     <link rel="stylesheet" href="./assets/css/sections/contact.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="stylesheet" href="./assets/css/buttons.css">
     <link rel="stylesheet" href="./assets/css/active-links.css">
 
@@ -646,8 +647,8 @@
 
       <!--=============== Contact ===============-->
       <section class="contact section" id="contact">
-        <div class="contac__content container">
-          <h2 class="section_-title">
+        <div class="contact__content container">
+          <h2 class="section__title">
             Entrar em contato_
           </h2>
 
